Delete several ids
